--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -15,7 +15,7 @@
 
     <h3> 
       Cadastros no link a baixo: <br>
-      <a href="{% url "sobre-cadastros" %}" >Sobre cadastros</a><br>
+      <a href="{% url "sobrecadastros" %}" >Sobre cadastros</a><br>
     </h3>
     
   </body>
