--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -4,12 +4,13 @@
    <script src="script.js"></script>  
   <head>
   <body>
-    <h1 class="sos">SOS-Doe Agora</h1>
+    <h1 class="sos">SOS-DoeAgora</h1>
     
     <h1 class="centro">
       
-    Este Website terá como objetivo  incentivar a doação de produtos de higiene pessoal. Com isso proporcionar a distribuição para as famílias que serão contempladas. <br>  A base desse projeto  social é voltada à ajudar pessoas que possuem necessidades, porém não tem como supri-las de forma autônoma. 
-    Algo que podemos ressaltar é que a nossa sociedade brasileira é umas das mais desiguais do mundo. E para diminuir todo esse cenário bastante presente em todo nosso meio social, fizemos a criação deste website.
+    Este Website tem como objetivo incentivar a doação de roupas e produtos de higiene pessoal e assim, proporcionar a distribuição dos mesmos para famílias necessitadas e que participarem do cadastro do site. <br>  
+    A base desse projeto social é voltada à ajudar pessoas que possuem necessidades, porém não tem condições de supri-las de forma autônoma. 
+    Algo que podemos ressaltar é que a nossa sociedade brasileira é umas das mais desiguais do mundo, e para diminuir todo esse cenário bastante presente em todo nosso meio social, fizemos a criação deste website.
 
     </h1>
 
