--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -5,17 +5,21 @@
   <head>
   <body>
     <h1 class="sos">SOS-DoeAgora</h1>
-    
-    <h1 class="centro">
-      
-    Este Website tem como objetivo incentivar a doação de roupas e produtos de higiene pessoal e assim, proporcionar a distribuição dos mesmos para famílias necessitadas e que participarem do cadastro do site. <br>  
-    A base desse projeto social é voltada à ajudar pessoas que possuem necessidades, porém não tem condições de supri-las de forma autônoma. 
-    Algo que podemos ressaltar é que a nossa sociedade brasileira é umas das mais desiguais do mundo, e para diminuir todo esse cenário bastante presente em todo nosso meio social, fizemos a criação deste website.
+    <hr>
+    SOS-DoeAgora é um website que tem o intuito de realizar arrecadações de roupas e produtos 
+    de higiene pessoal e distribuir essas arrecadações para pessoas necessitadas e que não possuem 
+    condições financeiras suficientes para arcar com as despesas destes produtos em seu cotidiano. 
+    <p> Esse projeto foi criado, pois é notório o grande índice de pobreza vivenciado na sociedade
+    brasileira, além da desigualdade social que vem crescendo gradativamente na mesma. Nós acreditamos 
+    que esse projeto é o primeiro passo para mudar esse quadro tão presente na vida de tantas pessoas, 
+    e assim, tornar a nossa sociedade mais igualitária, trabalhar atos de empatia e generosidade, e o 
+    mais importante, levar bem-estar e cuidados para a vida do próximo.</p>
+    <hr>
 
     </h1>
 
     <h3> 
-      Cadastros no link a baixo: <br>
+      Cadastros no link abaixo: <br>
       <a href="{% url "doeagora:sobrecadastros" %}" >Sobre Cadastros</a><br>
     </h3>
     
