--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -19,7 +19,7 @@
     </h1>
 
     <h3> 
-      <a href="{% url "doeagora:antesdocadastro" %}" >Cadastre-se aqui </a><br>
+      <a href="{% url "doeagora:sobrecadastros" %}" >Cadastre-se aqui </a><br>
     </h3>
     
   </body>
