--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -21,7 +21,7 @@
     <h3> 
       <a href="{% url "doeagora:sobrecadastros" %}" > Cadastre-se aqui </a><br>
     <p>
-      <a href="{% url "doeagora:sosdoeinfo" %}class="link1"> Vem conhecer mais :) </a><br>
+      <a href="{% url "doeagora:sosdoeinfo" %}" > Vem conhecer mais :) </a><br>
     </p>
     </h3>
     
