--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -20,6 +20,7 @@
 
     <h3> 
       <a href="{% url "doeagora:sobrecadastros" %}" > Cadastre-se aqui </a><br>
+      <a href="{% url "doeagora:sosdoeinfo" %}" > Vem conhecer mais :) </a><br>
     
     </h3>
     
