--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <link href="style.css" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
    <script src="script.js"></script>  
   <head>
   <body>
