--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -3,7 +3,7 @@ body{
     line-height: 1.0;
     width: 90%;
     margin: auto;
-    font-family: OCR A Std, monospace; 
+    font-family: Arial; 
   }
   
   .cadastros{
