--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -21,9 +21,10 @@
     </h1>
 
     <h3> 
-      <a href="{% url "doeagora:sobrecadastros" %}" > Cadastre-se aqui </a><br>
-      <a href="{% url "doeagora:sosdoeinfo" %}" > Vem conhecer mais :) </a><br>
-    
+      <a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Cadastre-se aqui </a><br>
+      <p>
+      <a href="{% url "doeagora:sosdoeinfo" %}" class="link1"> Vem conhecer mais :) </a><br>
+      </p>
     </h3>
     
   </body>
