--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -1,12 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-  <link href="style.css" rel="stylesheet" type="text/css" 
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}"> 
    <script src="script.js"></script>
   <head>
   <body>
     <h1 class="sos">SOS-Doe Agora</h1>
+
    <h3 class="cd">
-      Os links a baixo irão direciona-los aos determinados cadastros. <br>
+  
+      <p> Bem Vindo(a) à página de Cadastros!!! </p>
+    <p> Aqui vamos direcionar vocês aos seus determinados cadastros :)</p>
+    <p> Vamos lá?? </p>
+  <hr>
     
     <a href="Cadastro.html">Cadastro de beneficiários</a><br>
     <a href="c.doadores.html">Cadastro de doadores</a><br>
