--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -13,12 +13,22 @@
     <p> Aqui vamos direcionar vocês aos seus determinados cadastros :)</p>
     <p> Vamos lá?? </p>
   <hr>
+
+    <p>Se Você é um benefeciário, ou seja, é aquele que irá receber as doações, clique aqui: </p>
+    <p><a href="{% url "doeagora:c.beneficiario" %}" class="link2"> Cadastro de Beneficiários </a><br></p> 
+    <hr>
+
+
+    <p>Se Você é um doador, ou seja, é aquele que irá ajudar outras pessoas doando produtos, clique aqui: </p>
+    <p><a href="{% url "doeagora:c.doadores" %}" class="link2"> Cadastro de Doadores </a><br></p>
+  <hr>
+
+    <p>Se Você é uma instituição, ou seja, será responsável por receber as doações e encaminha-las aos beneficiários, clique aqui: </p>
+    <p><a href="{% url "doeagora:c.instituição" %}" class="link2"> Cadastro de Instituições </a><br></p>
+  <hr>
     
-    <a href="Cadastro.html">Cadastro de beneficiários</a><br>
-    <a href="c.doadores.html">Cadastro de doadores</a><br>
-    <a href="c.instituição.html">Cadastro de instituições</a><br></p>
    </h3>
 
   </body>
-  <p class="left"><a href="{% url "doeagora:index" %}"> Volte a página inicial </a></p>
+  <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
 </html>
