--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -38,7 +38,7 @@ body{
   }
   
   .doadores {
-    background: url(img/generosidade);
+    background: url(img/generosidade.jpeg);
     background-size: 1400px 1200px;
     font-weight: 900;
     color: black;
@@ -47,7 +47,7 @@ body{
     // OK
   }
   .instituicao {
-    background: url(img/generosidade);
+    background: url(img/generosidade.jpeg);
     background-size: 1400px 1200px;
     font-weight: 900;
     color: black;
@@ -57,7 +57,7 @@ body{
   }
   
   .beneficiario{
-    background: url(img/generosidade);
+    background: url(img/generosidade.jpeg);
     background-size: 1400px 1200px;
     font-weight: 900;
     color: black;
