--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -1,1 +1,2 @@
-<h1>SOS-DoeAgora Informações</h1>
+{% load static %}
+<h1>Precismos acrescentar nessa pagina os textos de sociologia estudados e infográficos sobre a situação de pobreza em nossa sociedade!!!</h1>
