--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -15,31 +15,11 @@
      <div class="container">
       <hr>
       <h2>Cadastro de beneficiários<cadastro></cadastro></h2>
-      <form action="form-group" method="post">
-      <hr>
-
-        <div>
-          <label for="nome"><span style="color:red">*</span> Nome: </label>
-         <input class="form-control" type="text" placeholder="Exemplo: José Santos Silva..." name="nome">
-        </div>
-        <div>
-          <label for="nome"><span style="color:red">*</span> Telefone: </label>
-         <input class="form-control" type="text" placeholder="Exemplo:(83) 9 9999-9999" name="nome">
-        </div>
-         <div>
-          <label for="nome"><span style="color:red">*</span> Endereço: </label>
-         <input class="form-control" type="text" placeholder="Exemplo: Rua José Almeida..."
-        <div>
-          <label for="nome"><span style="color:red">*</span> CPF: </label>
-         <input class="form-control" type="text" placeholder="Exemplo: 123.456.789-10" name="nome">
-        </div>
-        
-    
-        <hr>
-        <p class="botao">
-          <a href="{% url "doeagora:fim p beneficiados" %}" title="Finalizar cadastro">Enviar</a>
-        </p>
-        <hr>
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
+</form>
     
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
 
