--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -14,7 +14,7 @@
      
      <div class="container">
       <hr>
-      <h2>Cadastro de beneficiários<cadastro></cadastro></h2>
+      <h2>Cadastro de Beneficiários<cadastro></cadastro></h2>
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
