--- a/doeagora/templates/doeagora/c.instituição.html
+++ b/doeagora/templates/doeagora/c.instituição.html
@@ -13,7 +13,7 @@
   <hr>
   <body class="instituicao">
      <div class="container">
-      <h2>Cadastro de instituições<cadastro></cadastro></h2>
+      <h2>Cadastro de Instituições<cadastro></cadastro></h2>
       <hr>
 <form action="" method="post">
     {% csrf_token %}
