--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -1,2 +1,2 @@
 {% load static %}
-<h1>Precismos acrescentar nessa pagina os textos de sociologia estudados e infográficos sobre a situação de pobreza em nossa sociedade!!!</h1>
+<h1>Precisamos acrescentar nessa pagina os textos de sociologia estudados e infográficos sobre a situação de pobreza em nossa sociedade!!!</h1>
