--- a/doeagora/templates/doeagora/c.instituição.html
+++ b/doeagora/templates/doeagora/c.instituição.html
@@ -25,5 +25,8 @@
       </p>
       <hr>
       
-<p><a href="index.html" class="link1">Volte a página inicial</a></p>
-<p><a href="sobrecadastros.html" class="link1">Volte a página de cadastros</a></p>
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
+
+<p><a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Volte a página de cadastros </a></p>
+      
+      
