--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -15,7 +15,7 @@
      <div class="container">
       <hr>
       <h2>Cadastro de Beneficiários<cadastro></cadastro></h2>
-<form action="" method="post" class="tabelas" >
+<form action="" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
