--- a/doeagora/templates/doeagora/c.doadores.html
+++ b/doeagora/templates/doeagora/c.doadores.html
@@ -1,18 +1,27 @@
+{% load static %}
+<!DOCTYPE html>
+<html>  
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>SOS-DoeAgora</title>
+    <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
+    <script src="script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  </head>
 
-<div class="container">
-    <hr>
-   <h2>Cadastro de doadores<cadastro></cadastro></h2>
+  <body class="beneficiario">
+
+     <div class="container">
+      <hr>
+      <h2>Cadastro de Doadores<cadastro></cadastro></h2>
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
 </form>
-   
-   <hr>
-  <p class="botao">
-   <a href="fim.html" title="Finalizar cadastro">Enviar</a>
-   </p>
-   <hr>
 
-<p><a href="index.html" class="link1">Volte a página inicial</a></p>
-<p><a href="sobrecadastros.html" class="link1">Volte a página de cadastros</a></p>
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
+
+<p><a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Volte a página de cadastros </a></p>
+
