--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -19,6 +19,7 @@
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
+    <a href="{%url "doeagora:fim p beneficiados" %}" title="Finalizar cadastro">Enviar</a>
 </form>
     
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
