--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -18,8 +18,8 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Enviar">
-    <a href="{%url "doeagora:fim p beneficiados" %}">Enviar</a>
+    
+    <a href="{%url "doeagora:fim p beneficiados" %}"><input type="submit" value="Enviar"></a>
 </form>
     
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
