--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -19,7 +19,7 @@
     {% csrf_token %}
     {{ form }}
     
-    <a href="{%url "doeagora:fim p beneficiados" %}"><input type="submit" value="Enviar"></a>
+    <a input type="submit" value="Enviar" href="{%url "doeagora:fim p beneficiados" %}"></a>
 </form>
     
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
