--- a/doeagora/templates/doeagora/c.doadores.html
+++ b/doeagora/templates/doeagora/c.doadores.html
@@ -18,7 +18,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit">
+    <input type="submit" value="Enviar">
     
 </form>
 
