--- a/doeagora/templates/doeagora/c.instituição.html
+++ b/doeagora/templates/doeagora/c.instituição.html
@@ -18,7 +18,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit">
+    <input type="submit" value="Enviar">
 </form>
       
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
