--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -1,2 +1,18 @@
 {% load static %}
-<h1>Precisamos acrescentar nessa pagina os textos de sociologia estudados e infográficos sobre a situação de pobreza em nossa sociedade!!!</h1>
+<!DOCTYPE html>
+<html>
+    <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
+   <script src="script.js"></script>  
+  <head>
+  <body>
+    <h1 class="sosdoeinfo">Conheça mais um pouco sobre o SOS-DoeAgora</h1>
+    
+    <h2>
+    <hr>
+  
+    
+    <hr>
+    </h2>
+<p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
+  </body>
+</html>
