--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -18,7 +18,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Enviar" href="{%url "doeagora:fim p beneficiados" %}">
+    <input type="submit" value="Enviar">
     
 </form>
     
