--- a/doeagora/templates/doeagora/fim_beneficiados.html
+++ b/doeagora/templates/doeagora/fim_beneficiados.html
@@ -12,7 +12,7 @@
      Cadastro realizado com sucesso :) <br>
      <p>Clique no link a baixo e volte <br> para a página inicial: </p>
      
-     <p class="fim"><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
+     <p class="fim2"><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
    </h3>
   
   </body>
