--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -21,9 +21,11 @@
     </h1>
 
     <h3> 
-      <a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Cadastre-se aqui </a><br>
+      <a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Cadastre-se aqui!!! </a><br>
       <p>
-      <a href="{% url "doeagora:sosdoeinfo" %}" class="link1"> Vem conhecer mais :) </a><br>
+        <a href="{% url "doeagora:login" %}" class="link1"> *Login* </a><br>
+        <p> 
+      <a href="{% url "doeagora:sosdoeinfo" %}" class="link1"> Saiba mais sobre SOS-DoeAgora :) </a><br>
       </p>
     </h3>
     
