--- a/doeagora/templates/doeagora/index.html
+++ b/doeagora/templates/doeagora/index.html
@@ -21,9 +21,9 @@
     </h1>
 
     <h3> 
-      <a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Cadastre-se aqui!!! </a><br>
+      <a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Realize seu Cadastro </a><br>
       <p>
-        <a href="{% url "doeagora:login" %}" class="link1"> *Login* </a><br>
+        <a href="{% url "doeagora:login" %}" class="link1"> Faça login </a><br>
         <p> 
       <a href="{% url "doeagora:sosdoeinfo" %}" class="link1"> Saiba mais sobre SOS-DoeAgora :) </a><br>
       </p>
