--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -5,7 +5,7 @@
    <script src="script.js"></script>  
   <head>
   <body>
-    <h1 class="sosdoeinfo">Conheça mais um pouco sobre o SOS-DoeAgora</h1>
+    <h1 class="sosdoeinfo"> Conheça um pouco mais sobre o SOS-DoeAgora :) </h1>
     
     <h2>
     <hr>
