--- a/doeagora/templates/doeagora/login.html
+++ b/doeagora/templates/doeagora/login.html
@@ -4,10 +4,10 @@
   <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
    <script src="script.js"></script>  
   <head>
-  <body>
+  <body class="login">
     <h1 class="sos">SOS-DoeAgora</h1>
     
-    <h1 class="login">
+    <h1>
     <hr>
     <div>
           <label for="nome"><span style="color:red"></span>Digite seu email: </label>
