--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -14,10 +14,10 @@
      
      <div class="container">
       <hr>
-      <h2>Cadastro de BeneficiárioS<cadastro></cadastro></h2>
+      <h2>Cadastro de Beneficiários<cadastro></cadastro></h2>
 <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_table }}
+    {{ form.as_p }}
     <input type="submit" value="Enviar">
     
 </form>
