--- a/doeagora/templates/doeagora/c.beneficiario.html
+++ b/doeagora/templates/doeagora/c.beneficiario.html
@@ -17,7 +17,7 @@
       <h2>Cadastro de Beneficiários<cadastro></cadastro></h2>
 <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_table  }}
+    {{ form.as_ul  }}
     <input type="submit" value="Enviar">
     
 </form>
