--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -24,7 +24,7 @@
   <hr>
 
     <p>Se Você é uma instituição, ou seja, será responsável por receber as doações e encaminha-las aos beneficiários, clique aqui: </p>
-    <p><a href="{% url "doeagora:c.instituição" %}" class="link2"> Cadastro de Instituições </a><br></p>
+    <p><a href="{% url "doeagora:c.instituicao" %}" class="link2"> Cadastro de Instituições </a><br></p>
   <hr>
     
    </h3>
