--- a/doeagora/templates/doeagora/c.instituicao.html
+++ b/doeagora/templates/doeagora/c.instituicao.html
@@ -17,7 +17,7 @@
       <h2>Cadastro de Instituições<cadastro></cadastro></h2>
 <form action="" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_ul }}
     <input type="submit" value="Enviar">
 </form>
       
