--- a/doeagora/templates/doeagora/verlistagemdoador.html
+++ b/doeagora/templates/doeagora/verlistagemdoador.html
@@ -1,3 +1,3 @@
 {% for doador in doadores %}
-<a href="{% url 'doeagora:ver_doador'  doador.pk %}">{{ doador }}</a>
+<a href="{% url 'doeagora:ver_doadores'  doador.pk %}">{{ doador }}</a>
 {% endfor %}
