--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -9,7 +9,17 @@
     
     <h2>
     <hr>
-  
+    <p>Instituições: </p>
+    <p><a href="{% url "doeagora:verinstituicao" %}" class="link2"> Cadastro de Beneficiários </a><br></p> 
+    <hr>
+
+
+    <p>Se Doadores: </p>
+    <p><a href="{% url "doeagora:verdoador" %}" class="link2"> Cadastro de Doadores </a><br></p>
+    <hr>
+
+    <p>Beneficiários: </p>
+    <p><a href="{% url "doeagora:verbeneficiario" %}" class="link2"> Cadastro de Instituições </a><br></p>
     
     <hr>
     </h2>
