--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -10,16 +10,16 @@
     <h2>
     <hr>
     <p>Instituições: </p>
-    <p><a href="{% url "doeagora:verinstituicao" %}" class="link2"> Cadastro de Beneficiários </a><br></p> 
+    <p><a href="{% url "doeagora:verinstituicao" %}" class="link2"> Ver instituições participantes </a><br></p> 
     <hr>
 
 
     <p>Se Doadores: </p>
-    <p><a href="{% url "doeagora:verdoador" %}" class="link2"> Cadastro de Doadores </a><br></p>
+    <p><a href="{% url "doeagora:verdoador" %}" class="link2"> Ver doadores participantes </a><br></p>
     <hr>
 
     <p>Beneficiários: </p>
-    <p><a href="{% url "doeagora:verbeneficiario" %}" class="link2"> Cadastro de Instituições </a><br></p>
+    <p><a href="{% url "doeagora:verbeneficiario" %}" class="link2"> Ver beneficiários participantes </a><br></p>
     
     <hr>
     </h2>
