--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -22,9 +22,11 @@ body{
     font-family: fangsong;
     background: #000000bf;
     font-size: 180%;
-  
   }
   
+  h2 {
+    color: white;
+  }
   .sos {
     background: #0000006b;
     color: white;
