--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -14,7 +14,7 @@
     <hr>
 
 
-    <p>Se Doadores: </p>
+    <p>Doadores: </p>
     <p><a href="{% url "doeagora:verlistagemdoador" %}" class="link2"> Ver doadores participantes </a><br></p>
     <hr>
 
