--- a/doeagora/templates/doeagora/listagem.html
+++ b/doeagora/templates/doeagora/listagem.html
@@ -5,9 +5,9 @@
    <script src="script.js"></script>  
   <head>
   <body>
-    <h1 class="sosdoeinfo"> Página de Listagens </h1>
+    <h1> Página de Listagens </h1>
     
-    <h2>
+    <h2 class="sosdoeinfo">
     <hr>
     <p>Instituições: </p>
     <p><a href="{% url "doeagora:verlistageminstituicao" %}" class="link2"> Ver instituições participantes </a><br></p> 
