--- a/doeagora/templates/doeagora/verlistageminstituicao.html
+++ b/doeagora/templates/doeagora/verlistageminstituicao.html
@@ -1,3 +1,3 @@
 {% for instituicao in instituicoes %}
-<a href="{% url 'doeagora:ver_instituicao'  instituicao.pk %}">{{ instituicao }}</a>
+<p><a href="{% url 'doeagora:ver_instituicao'  instituicao.pk %}">{{ instituicao }}</a></p>
 {% endfor %}
