--- a/doeagora/templates/doeagora/verlistagembeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagembeneficiario.html
@@ -1,3 +1,3 @@
 {% for beneficiario in beneficiarios %}
-<a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}">{{ beneficiario }}</a>
+<p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}">{{ beneficiario }}</a></p>
 {% endfor %}
