--- a/doeagora/templates/doeagora/verbeneficiario.html
+++ b/doeagora/templates/doeagora/verbeneficiario.html
@@ -1,1 +1,2 @@
 {{ beneficiario.nome }} ---> {{ beneficiario.cpf }}
+<a href="{% url 'doeagora:editar_beneficiario' beneficiario.pk %}"> Editar </a>
