--- a/doeagora/templates/doeagora/verdoador.html
+++ b/doeagora/templates/doeagora/verdoador.html
@@ -1,2 +1,3 @@
 {{ doador.nome }} ---> {{ doador.cpf }}
 <a href="{% url 'doeagora:editar_doador' doador.pk %}"> Editar </a>
+<a href="{% url 'doeagora:excluir_doador' doador.pk %}"> Excluir </a>
