--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -1,2 +1,3 @@
 {{ instituicao.nome }} ---> {{ instituicao.email }}
 <a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}"> Editar </a>
+<a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}"> Excluir </a>
