--- a/doeagora/templates/doeagora/verlistagembeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagembeneficiario.html
@@ -1,3 +1,5 @@
 {% for beneficiario in beneficiarios %}
 <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}">{{ beneficiario }}</a></p>
 {% endfor %}
+
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
