--- a/doeagora/templates/doeagora/verbeneficiario.html
+++ b/doeagora/templates/doeagora/verbeneficiario.html
@@ -1,3 +1,12 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}"> 
+   <script src="script.js"></script>
+  <head>
+  <body>
+    <h1 class="sos">SOS-Doe Agora</h1>
+    
 {{ beneficiario.nome }} ---> {{ beneficiario.cpf }}
 <a href="{% url 'doeagora:editar_beneficiario' beneficiario.pk %}"> Editar </a>
 <a href="{% url 'doeagora:excluir_beneficiario' beneficiario.pk %}"> Excluir </a>
