--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -1,3 +1,12 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}"> 
+   <script src="script.js"></script>
+  <head>
+  <body>
+    <h1 class="sos">SOS-Doe Agora</h1>
+
 {{ instituicao.nome }} ---> {{ instituicao.email }}
 <a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}"> Editar </a>
 <a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}"> Excluir </a>
