--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -7,6 +7,10 @@
   <body>
     <h1 class="sos">SOS-Doe Agora</h1>
 
+<h2 class=listagens>
+    
 {{ instituicao.nome }} ---> {{ instituicao.email }}
 <a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}"> Editar </a>
 <a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}"> Excluir </a>
+
+</h2>
