--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -14,6 +14,13 @@ body{
   }
   .listagens{
     color: white;
+    width: 100%;
+    text-align: center;
+    text-indent: 10px;
+    margin: 20px;
+    font-family: fangsong;
+    background: #000000bf;
+    font-size: 180%;
   }
   h1 {
     color: white;
