--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -7,7 +7,7 @@
   <body>
     <h1 class="sos">SOS-Doe Agora</h1>
 
-<h2 class=listagens>
+<h2 class="listagens">
 
     {{ instituicao.nome }} ---> {{ instituicao.email }}
     <p><a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}"> Editar </a></p>
