--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -5,7 +5,7 @@
    <script src="script.js"></script>
   <head>
   <body>
-    <h1 class="sos">SOS-Doe Agora</h1>
+    <h1 class="listagens">SOS-Doe Agora</h1>
 
 <h2>
 
