--- a/doeagora/templates/doeagora/verlistagembeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagembeneficiario.html
@@ -1,3 +1,12 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}"> 
+   <script src="script.js"></script>
+  <head>
+  <body>
+    <h1 class="sos">SOS-Doe Agora</h1>
+
 {% for beneficiario in beneficiarios %}
 <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}">{{ beneficiario }}</a></p>
 {% endfor %}
