--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -11,7 +11,7 @@
 
     {{ instituicao.nome }} ---> {{ instituicao.email }}
     <p><a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}" class="link2" > Editar </a></p>
-    <p><a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}" class="link2ok"> Excluir </a></p>
+    <p><a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}" class="link2"> Excluir </a></p>
     
 
 </h2>
