--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -7,7 +7,7 @@
   <body>
     <h1 class="listagens">SOS-Doe Agora</h1>
 
-<h2>
+<h2 class="editlist">
 
     {{ instituicao.nome }} ---> {{ instituicao.email }}
 
