--- a/doeagora/templates/doeagora/sobrecadastros.html
+++ b/doeagora/templates/doeagora/sobrecadastros.html
@@ -27,6 +27,10 @@
     <p><a href="{% url "doeagora:c.instituicao" %}" class="link2"> Cadastro de Instituições </a><br></p>
   <hr>
     
+    <p>Deseja fazer uma doação? Clique aqui: </p>
+    <p><a href="{% url "doeagora:doacao" %}" class="link2"> Cadastro de Doações </a><br></p>
+  <hr>
+
    </h3>
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
   </body>
