--- a/doeagora/templates/doeagora/doacao.html
+++ b/doeagora/templates/doeagora/doacao.html
@@ -1,35 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>SOS-DoeAgora</title>
+    <link rel="stylesheet" href="{% static 'doeagora/css/style.css' %}">
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
   </head>
-  <hr>
+
   <body class="doacoes">
+
      <div class="container">
-      <h2>Faça aqui suas doações<cadastro></cadastro></h2>
       <hr>
-      <form action="form-group" method="post">
-        <div>
-          <label for="nome"><span style="color:red">*</span> Qual produto você vai doar</label>
-         <input class="form-control" type="text" placeholder="Exemplo: sabonete,toalha, shampoo..." 
-        name="nome">
-         <div>
-          <label for="nome"><span style="color:red">*</span> Quantidade que será doada: </label>
-         <input class="form-control" type="text" placeholder="Exemplo: 1 sabonete,3 toalhas, 1 shampoo...." name="nome">
-        </div>
-       <hr> 
-    
-     <p class="botao">
-      <a href="d.realizada.html" title="Finalizar cadastro">Enviar</a>
-      </p>
-      <hr>
+      <h2>Cadastro de Doaçoes<cadastro></cadastro></h2>
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_ul }}
+    <input type="submit" value="Enviar">   
+</form>
 
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
 
-<p><a href="index.html" class="link1">Volte a página inicial</a></p>
+<p><a href="{% url "doeagora:sobrecadastros" %}" class="link1"> Volte a página de cadastros </a></p>
