--- a/doeagora/templates/doeagora/verbeneficiario.html
+++ b/doeagora/templates/doeagora/verbeneficiario.html
@@ -8,5 +8,7 @@
     <h1 class="sos">SOS-Doe Agora</h1>
     
 {{ beneficiario.nome }} ---> {{ beneficiario.cpf }}
-<a href="{% url 'doeagora:editar_beneficiario' beneficiario.pk %}"> Editar </a>
-<a href="{% url 'doeagora:excluir_beneficiario' beneficiario.pk %}"> Excluir </a>
+
+<p><a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}" class="link1" > Editar </a></p>
+<p><a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}" class="link1"> Excluir </a></p>
+    
