--- a/doeagora/templates/doeagora/verbeneficiario.html
+++ b/doeagora/templates/doeagora/verbeneficiario.html
@@ -9,6 +9,6 @@
     
 {{ beneficiario.nome }} ---> {{ beneficiario.cpf }}
 
-<p><a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}" class="link1" > Editar </a></p>
-<p><a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}" class="link1"> Excluir </a></p>
+<p><a href="{% url 'doeagora:editar_beneficiario' beneficiario.pk %}" class="link1" > Editar </a></p>
+<p><a href="{% url 'doeagora:excluir_beneficiario' beneficiario.pk %}" class="link1"> Excluir </a></p>
     
