--- a/doeagora/templates/doeagora/verdoador.html
+++ b/doeagora/templates/doeagora/verdoador.html
@@ -9,6 +9,6 @@
     
 {{ doador.nome }} ---> {{ doador.cpf }}
 
-<p><a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}" class="link1" > Editar </a></p>
-<p><a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}" class="link1"> Excluir </a></p>
+<p><a href="{% url 'doeagora:editar_doador' doador.pk %}" class="link1" > Editar </a></p>
+<p><a href="{% url 'doeagora:excluir_doador' doador.pk %}" class="link1"> Excluir </a></p>
     
