--- a/doeagora/templates/doeagora/verlistageminstituicao.html
+++ b/doeagora/templates/doeagora/verlistageminstituicao.html
@@ -5,7 +5,7 @@
    <script src="script.js"></script>
   <head>
   <body>
-    <h1 class="sos">SOS-Doe Agora</h1>
+    <h1 class="listagens">SOS-Doe Agora</h1>
 
   {% for instituicao in instituicoes %}
   <p><a href="{% url 'doeagora:ver_instituicao'  instituicao.pk %}">{{ instituicao }}</a></p>
