--- a/doeagora/templates/doeagora/verlistageminstituicao.html
+++ b/doeagora/templates/doeagora/verlistageminstituicao.html
@@ -7,9 +7,12 @@
   <body>
     <h1 class="listagens">SOS-Doe Agora</h1>
 
+    <h3 class="cd">
+
   {% for instituicao in instituicoes %}
-  <p><a href="{% url 'doeagora:ver_instituicao'  instituicao.pk %}">{{ instituicao }}</a></p>
+  <p><a href="{% url 'doeagora:ver_instituicao'  instituicao.pk %}" class= "link2">{{ instituicao }}</a></p>
   {% endfor %}
+    </h3>
 
 <p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
 <p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
