--- a/doeagora/templates/doeagora/verlistagembeneficiario.html
+++ b/doeagora/templates/doeagora/verlistagembeneficiario.html
@@ -8,9 +8,9 @@
     <h1 class="sos">SOS-Doe Agora</h1>
 
     <h3 class="cd">
-      
+
   {% for beneficiario in beneficiarios %}
-  <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}">{{ beneficiario }}</a></p>
+  <p><a href="{% url 'doeagora:ver_beneficiario'  beneficiario.pk %}" class= "link2">{{ beneficiario }}</a></p>
   {% endfor %}
     </h3>
 
