--- a/doeagora/templates/doeagora/verdoador.html
+++ b/doeagora/templates/doeagora/verdoador.html
@@ -7,8 +7,12 @@
   <body>
     <h1 class="sos">SOS-Doe Agora</h1>
     
-{{ doador.nome }} ---> {{ doador.cpf }}
+    <h3 class="cd"></h3>
 
+    {{ doador.nome }} ---> {{ doador.cpf }}
+
+    </h3>
+    
 <p><a href="{% url 'doeagora:editar_doador' doador.pk %}" class="link1" > Editar </a></p>
 <p><a href="{% url 'doeagora:excluir_doador' doador.pk %}" class="link1"> Excluir </a></p>
     
