--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -7,8 +7,11 @@
   <body>
     <h1 class="listagens">SOS-Doe Agora</h1>
 
+    <h3 class="cd">
 
-{{ instituicao.nome }} ---> {{ instituicao.email }}
+    {{ instituicao.nome }} ---> {{ instituicao.email }}
+
+    </h3>
 
 <p><a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}" class="link1" > Editar </a></p>
 <p><a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}" class="link1"> Excluir </a></p>
