--- a/doeagora/templates/doeagora/verdoador.html
+++ b/doeagora/templates/doeagora/verdoador.html
@@ -7,7 +7,7 @@
   <body>
     <h1 class="sos">SOS-Doe Agora</h1>
     
-    <h3 class="cd"></h3>
+    <h3 class="cd">
 
     {{ doador.nome }} ---> {{ doador.cpf }}
 
