--- a/doeagora/templates/doeagora/verbeneficiario.html
+++ b/doeagora/templates/doeagora/verbeneficiario.html
@@ -14,7 +14,10 @@
     <p><a href="{% url 'doeagora:editar_beneficiario' beneficiario.pk %}" class="link1" > Editar </a></p>
     <p><a href="{% url 'doeagora:excluir_beneficiario' beneficiario.pk %}" class="link1"> Excluir </a></p>
     
-
-
     </h3>
+    
+<p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
+    
+
 
