--- a/doeagora/templates/doeagora/verinstituicao.html
+++ b/doeagora/templates/doeagora/verinstituicao.html
@@ -13,9 +13,10 @@
 
     <p><a href="{% url 'doeagora:editar_instituicao' instituicao.pk %}" class="link1" > Editar </a></p>
     <p><a href="{% url 'doeagora:excluir_instituicao' instituicao.pk %}" class="link1"> Excluir </a></p>
-    
-
-
+  
     </h3>
-
+    
+<p><a href="{% url "doeagora:listagem" %}" class="link1"> Volte a página de listagens </a></p>
+<p><a href="{% url "doeagora:index" %}" class="link1"> Volte a página inicial </a></p>
+    
     
