--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -10,7 +10,7 @@
     <h2>
     <hr>
        O SOS-DoeAgora é um projeto voltado à arrecadação de produtos de higiene pessoal, como:Roupas, escovas de dente, entre outros produtos.
-       <br> Esse site foi desenvolvido por estudantes do curso técnico em informática do IFPB(Instituto Federal da Paraíba), visando a elaboração de um projeto
+       Foi desenvolvido por estudantes do curso técnico em informática do IFPB(Instituto Federal da Paraíba), visando a elaboração de um projeto
        e de um TCC. <br>
 
        
