--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -13,7 +13,7 @@
        Foi desenvolvido por duas estudantes do curso técnico em informática do IFPB(Instituto Federal da Paraíba), visando a elaboração de um projeto
        integrador e de um trabalho de TCC.
     <hr>
-      <p></p>
+    <h1 class="sosdoeinfo"> Porquê produtos de higiene pessoal? </h1>
        
     
     <hr>
