--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -14,9 +14,9 @@
        integrador e de um trabalho de TCC.
     <hr>
     <h1 class="sosdoeinfo"> Porquê produtos de higiene pessoal? </h1>
-       
-    
     <hr>
+      Acho que vocês se depararam com a seguinte pergunta, porquê produtos de higiene pessoa? <br>
+      Além de ser algo essencial para a vida do ser humano, por proporcinar a sua higiene e saúde e, pelo fato de muitas vezes não terem condições necessárias e em alguns casos viverem em extrema pobrema como, por exemplo, pessoas que estão em excassez de rua.
     </h2>
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
   </body>
