--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -15,7 +15,7 @@
     <hr>
     <h1 class="sosdoeinfo"> Porquê produtos de higiene pessoal? </h1>
     <hr>
-      Acho que vocês se depararam com a seguinte pergunta, porquê produtos de higiene pessoa? <br>
+     <h2> Acho que vocês se depararam com a seguinte pergunta, porquê produtos de higiene pessoa? <br>
       Além de ser algo essencial para a vida do ser humano, por proporcinar a sua higiene e saúde e, pelo fato de muitas vezes não terem condições necessárias e em alguns casos viverem em extrema pobrema como, por exemplo, pessoas que estão em excassez de rua.
     <hr>
       < /h2>
