--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -11,14 +11,17 @@
     <hr>
        O SOS-DoeAgora é um projeto voltado à arrecadação de produtos de higiene pessoal, como:Roupas, escovas de dente, entre outros produtos.
        Foi desenvolvido por duas estudantes do curso técnico em informática do IFPB(Instituto Federal da Paraíba), visando a elaboração de um projeto
-       integrador e de um trabalho de TCC.
+       integrador e de <br> um trabalho de TCC.
+    </h2>
     <hr>
-    <h1 class="sosdoeinfo"> Porquê produtos de higiene pessoal? </h1>
+    <h1 class="sosdoeinfo"> Porquê produtos de higiene pessoal?</h1>
     <hr>
-     <h2> Acho que vocês se depararam com a seguinte pergunta, porquê produtos de higiene pessoa? <br>
-      Além de ser algo essencial para a vida do ser humano, por proporcinar a sua higiene e saúde e, pelo fato de muitas vezes não terem condições necessárias e em alguns casos viverem em extrema pobrema como, por exemplo, pessoas que estão em excassez de rua.
-    <hr>
-      < /h2>
+     <h2> Acho que vocês se depararam com a seguinte pergunta, porquê produtos de higiene pessoal? <br>
+      Produtos de higiene pessoal são essenciais para a vida do ser humano, por proporcinar a sua higiene e saúde. Muitas vezes pessoas não possuem condições necessárias para suprir essas necessidades e em alguns casos viverem em condição de extrema pobreza como, por exemplo, pessoas que estão em excassez de rua. <br>
+      Mas não resolvemos desenvolver esse site apenas por essas questões, pois não são apenas produtos de higiene pessoal. É a própria dignidade exercida por cada cidadão, pois tomar um banho não é apenas um hábito, é trazer de volta a sua dignidade é <br>
+      o próprio bem estar. Um banho não é apenas uma rotina diária, não é apenas uma forma de proporcinar a saúde individual de cada um, mas sim um ato de renovação que não limpa apenas nosso meio físico, mas também o nosso meio espiritual.
+      <hr>
+    < /h2>
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
   </body>
 </html>
