--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -14,6 +14,11 @@
        integrador e de <br> um trabalho de TCC.
     </h2>
     <hr>
+    <h1 class="sosdoeinfo">Um pouco sobre nós</h1>
+    Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba). Somos Gabriella Jamilly e Maria das Mercês e fazemos o curso técnico em informática, que é integrado ao ensino médio. Nós estamos
+    cursando o último ano do ensino médio e esse site que é o nosso TCC é o requisito principal para a conclusão do ensino médio.
+    Encontramos diversas dificuldades na trajetória de criação deste website e estamos muito felizes por ter superado cada uma delas e finalmente ter concluído com grande êxito. 
+    <hr>
     <h1 class="sosdoeinfo"> Porquê produtos de higiene pessoal?</h1>
     <hr>
      <h2> Acho que vocês se depararam com a seguinte pergunta, porquê produtos de higiene pessoal? <br>
