--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -15,7 +15,7 @@
     </h2>
     <hr>
     <h1 class="sosdoeinfo">Um pouco sobre nós</h1>
-    <h2>Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba). <br> Nos chamamos Gabriella Jamilly e Maria das Mercês e fazemos o curso técnico em informática, que é integrado ao ensino médio. Nós estamos cursando o último ano do ensino médio e esse site que é o nosso TCC é <br> o requisito principal para a conclusão do ensino médio.
+    <h2>Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba). <br> Nos chamamos Gabriella Jamilly e Maria das Mercês e fazemos o curso técnico em informática, que é integrado ao ensino médio. Nós estamos cursando o último ano do ensino médio e esse site que é o nosso TCC é o requisito principal para a conclusão do ensino médio.
     Encontramos diversas dificuldades na trajetória de criação deste website e estamos muito felizes por ter superado cada uma delas e finalmente ter concluído com grande êxito. 
     </h2>
     <hr>
