--- a/doeagora/static/doeagora/css/style.css
+++ b/doeagora/static/doeagora/css/style.css
@@ -42,6 +42,9 @@ body{
   .sosdoeinfo {
     color: white;
   }
+  .txt{
+    color: white;
+  }
   .sos {
     background: #0000006b;
     color: white;
