--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -7,33 +7,32 @@
   <body>
     <h1 class="sos"> Conheça um pouco mais sobre o SOS-DoeAgora :) </h1>
     
-    <h2>
+    <h3 class="cd">
 
     <hr>
        O SOS-DoeAgora é um projeto voltado à arrecadação de produtos de higiene pessoal, como:Roupas, escovas de dente, entre outros produtos.
        Foi desenvolvido por duas estudantes do curso técnico em informática do IFPB(Instituto Federal da Paraíba), visando a elaboração de um projeto
        integrador e de <br> um trabalho de TCC.
-    </h2>
-
     <hr>
-      <h1 class="sosdoeinfo">Um pouco sobre nós</h1>
 
-      <h2>Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba). <br> Nos chamamos Gabriella Jamilly e Maria das Mercês e fazemos o curso técnico em informática, que é integrado ao ensino médio. Nós estamos cursando o último ano do ensino médio e esse site que é o nosso TCC é o requisito principal para a conclusão do ensino médio.
+      <h1 class="sos"> Quem é o SOS-DoeAgora? </h1>
+
+      <p> Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba). <br> Nos chamamos Gabriella Jamilly e Maria das Mercês e fazemos o curso técnico em informática, que é integrado ao ensino médio. Nós estamos cursando o último ano do ensino médio e esse site que é o nosso TCC é o requisito principal para a conclusão do ensino médio.
       Encontramos diversas dificuldades na trajetória de criação deste website e estamos muito felizes por ter superado cada uma delas e finalmente ter concluído com grande êxito. 
-      </h2>
-
+      </p>
     <hr>
 
       <h1 class="sosdoeinfo"> Porquê produtos de higiene pessoal?</h1>
     <hr>
 
-     <h2 > Acho que vocês se depararam com a seguinte pergunta, porquê produtos de higiene pessoal? <br>
+    <p>Acho que vocês se depararam com a seguinte pergunta: "Por que produtos de higiene pessoal?" <br>
       Produtos de higiene pessoal são essenciais para a vida do ser humano, por proporcinar a sua higiene e saúde. Muitas vezes pessoas não possuem condições necessárias para suprir essas necessidades e em alguns casos viverem em condição de extrema pobreza como, por exemplo, pessoas que estão em excassez de rua. <br>
       Mas não resolvemos desenvolver esse site apenas por essas questões, pois não são apenas produtos de higiene pessoal. É a própria dignidade exercida por cada cidadão, pois tomar um banho não é apenas um hábito, é trazer de volta a sua dignidade é <br>
       o próprio bem estar. Um banho não é apenas uma rotina diária, não é apenas uma forma de proporcinar a saúde individual de cada um, mas sim um ato de renovação que não limpa apenas nosso meio físico, mas também o nosso meio espiritual.
-     
+    </p>
     <hr>
-    </h2>
+    
+    </h3>
 
 <p class="left"><a href="{% url "doeagora:index" %}" class="link3"> Volte a página inicial </a></p>
   </body>
