--- a/doeagora/templates/doeagora/sosdoeinfo.html
+++ b/doeagora/templates/doeagora/sosdoeinfo.html
@@ -10,7 +10,7 @@
   <h1 class="sos"> Conheça um pouco mais sobre o SOS-DoeAgora :) </h1>
 
     <hr>
-    <p class="sosdoeinfo"> O SOS-DoeAgora é um projeto voltado à arrecadação de produtos de higiene pessoal,
+    <p class="cd"> O SOS-DoeAgora é um projeto voltado à arrecadação de produtos de higiene pessoal,
       como: Roupas, escovas de dente, entre outros produtos. Foi desenvolvido por duas estudantes
       do curso técnico em informática do IFPB(Instituto Federal da Paraíba), visando a elaboração
       de um projeto integrador e de <br> um trabalho de TCC. </p>
@@ -18,18 +18,17 @@
     <h3 class="cd"> teste </h3>
 
   
-    <p class="sosdoeinfo">Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba).
+    <p class="cd">Como citamos mais a cima somos estudantes do IFPB(Instituto Federal da Paraíba).
       <br> Nos chamamos Gabriella Jamilly e Maria das Mercês e fazemos o curso técnico em informática,
       que é integrado ao ensino médio. Nós estamos cursando o último ano do ensino médio e esse site que
       é o nosso TCC é o requisito principal para a conclusão do ensino médio.
       Encontramos diversas dificuldades na trajetória de criação deste website e estamos muito
-      felizes por ter superado cada uma delas e finalmente ter concluído com grande êxito.
-    </p>
+      felizes por ter superado cada uma delas e finalmente ter concluído com grande êxito.</p>
    
 
     <h3 class="cd"> teste 2 </h3>
 
-    <p class="sosdoeinfo" > Acho que vocês se depararam com a seguinte pergunta: "Por que produtos de higiene pessoal?" <br>
+    <p class="cd" > Acho que vocês se depararam com a seguinte pergunta: "Por que produtos de higiene pessoal?" <br>
       Produtos de higiene pessoal são essenciais para a vida do ser humano, por proporcinar a sua higiene
       e saúde. Muitas vezes pessoas não possuem condições necessárias para suprir essas necessidades e
       em alguns casos viverem em condição de extrema pobreza como, por exemplo, pessoas que estão em
